# linux

./: .gitignore  README.md  backend.cpp  backup  run.sh  tauri_config.md
Resolutions/: tauri_config.md
Resolutions/tauri/: cpp_config.md  tauri_config.md  前端开发概览.md
Test/: CMakeLists.txt  DEFECTS.md  README.md  TEST_CASES.md  TEST_PLAN.md  TEST_RESULTS.md  TRACEABILITY_MATRIX.md
Test/api/: test_api.sh  test_watch_schedule_cloud.sh
Test/cli/: test_cli.sh
Test/component/: test_archive_crypto.cpp  test_cloud_storage.cpp
Test/frontend/: README.md  check_e2e_env.sh  manual_page_checklist.md  run_e2e_full.sh  run_e2e_full_business.sh  run_e2e_smoke.sh  run_e2e_ui_smoke.sh  wdio.conf.ts
Test/frontend/helpers/: assertions.ts  cleanup.ts  env.ts  filesystem.ts  preflight.mjs  server.ts  waits.ts
Test/frontend/page-objects/: AppPage.ts  AuthPage.ts  BackupPage.ts  CloudPage.ts  FormPage.ts  ManagePage.ts  RestorePage.ts  SchedulePage.ts  TaskListPage.ts  WatchPage.ts
Test/frontend/specs/: app_flows.e2e.ts  auth.e2e.ts  backup.e2e.ts  cloud.e2e.ts  manage.e2e.ts  restore.e2e.ts  schedule.e2e.ts  smoke.e2e.ts  tasks.e2e.ts  watch.e2e.ts
Test/frontend/types/: wdio-globals.d.ts
Test/helpers/: test_utils.h
Test/integration/: test_backup_restore.cpp  test_defect_reproduction.cpp  test_metadata_manifest.cpp
Test/performance/: test_performance.sh
Test/scripts/: check_env.sh  cleanup.sh  common.sh  run_all_tests.sh
Test/security/: test_security.sh
Test/smoke/: test_smoke.cpp
Test/unit/: test_filter.cpp  test_incremental_manifest.cpp  test_prune.cpp  test_user_auth_task.cpp  test_utils.cpp
backup_project/: CMakeLists.txt
backup_project/config/: server.conf
backup_project/include/cloud/: CloudConfig.h  ICloudStorage.h  LocalCloudStorage.h  RemoteCloudStorage.h
backup_project/include/core/: Archive.h  AuthManager.h  BackupEngine.h  Crypto.h  Filter.h  Incremental.h  Metadata.h  Scheduler.h  TaskManager.h  Types.h  UserManager.h  Utils.h
backup_project/include/server/: BackupServer.h
backup_project/src/: cli.cpp  main.cpp
backup_project/src/cloud/: CloudConfig.cpp  LocalCloudStorage.cpp  RemoteCloudStorage.cpp
backup_project/src/core/: Archive.cpp  AuthManager.cpp  BackupEngine.cpp  Crypto.cpp  Filter.cpp  Incremental.cpp  Metadata.cpp  Scheduler.cpp  TaskManager.cpp  UserManager.cpp  Utils.cpp
backup_project/src/server/: BackupServer.cpp
deprecated/: backendrun.sh  httplib.h  run.sh
frontend/: .gitignore
frontend/deprecated/: doctype.html  frontend.js
frontend/src/: App.vue
frontend/src/utils/: escape.js  request.js
scripts/: build-backup-sidecar.sh  pack-appimage.sh
tauri-app/: .gitignore  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.vue
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/api/: auth.ts  backup.ts  client.ts  cloud.ts  types.ts
tauri-app/src/components/: AuthPanel.vue  BackupManagePanel.vue  BackupPanel.vue  CloudPanel.vue  EmptyState.vue  PathInput.vue  PathPicker.vue  RestorePanel.vue  SchedulePanel.vue  SubmitButton.vue  TaskList.vue  ToastHost.vue  WatchPanel.vue
tauri-app/src/composables/: useMessage.ts
tauri-app/src/styles/: global.css
tauri-app/src/utils/: cloudToken.ts  format.ts  options.ts  session.ts  taskWatch.ts  validation.ts
